# handmark

./: .gitignore  BUILDER-PROGRESS.md  QA-REPORT.md  README.md  TESTING-QUICKSTART.md  WEEK-1-COMPLETE.md  docker-compose.yml
.github/workflows/: test.yml
backend/: .env.example  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/services/: grading.py
backend/app/tasks/: celery_app.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_grading.py
database/: schema.sql
docs/: API-CONTRACTS.md  ARCHITECT-REPORT.md  ARCHITECTURE.md  BACKLOG.md  CODING-STANDARDS.md  DATA-MODELS.md  QA-CHECKLIST.md  SECURITY.md  TEST-PLAN.md
frontend/: .env.example  .eslintrc.js  jest.config.js  jest.setup.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/e2e/: accessibility.spec.ts  auth.spec.ts  class-management.spec.ts  dashboard.spec.ts
frontend/e2e/fixtures/: accessibility.ts
frontend/e2e/pages/: ClassManagementPage.ts  DashboardPage.ts  LoginPage.ts
frontend/src/__mocks__/: supabase.ts
frontend/src/__tests__/components/: Button.test.tsx
frontend/src/__tests__/integration/: auth.test.tsx
frontend/src/__tests__/utils/: dateFormatter.test.ts  validation.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/callback/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/classes/: page.tsx
frontend/src/app/dashboard/classes/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/assignments/: RubricBuilder.tsx
frontend/src/components/auth/: protected-route.tsx
frontend/src/components/dashboard/: DashboardLayout.tsx  dashboard-layout.tsx
frontend/src/components/grading/: GradingReviewScreen.tsx
frontend/src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  spinner.tsx
frontend/src/hooks/: useClasses.ts  useStudents.ts
frontend/src/lib/: auth-context.tsx  supabase.ts
frontend/src/types/: auth.ts  database.ts
